tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Titanium-AAAAAAAAAAAAAAAAAAAImQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2201,
  "prerequisites": [
    2198,
    2184
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Titanium from bees will make getting those LCRs and distillation towers a breeze. Hey, I rhymed! You'll need a block of Titanium for this bee. Breed them from Aluminium and Redstone.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Titanium",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2198,
    2184
  ],
  "rewards": [],
  "tasks": []
}
